frontend/redis/ingress/ingress_grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: rubinity.stackit.gg
    http:
      paths:
      - pathType: Prefix
        path: "/grafana"
        backend:
          service:
            name: grafana-svc
            port:
              number: 3000
