frontend/redis/ingress/ingress_prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: rubinity.stackit.gg
    http:
      paths:
      - pathType: Prefix
        path: "/prometheus"
        backend:
          service:
            name: prometheus-svc
            port:
              number: 9090
