frontend/redis/ingress/ingress_tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildcard-rubinity-stackit-gg-tls
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - rubinity.stackit.gg
    secretName: wildcard-rubinity-stackit-gg-tls
  rules:
  - host: rubinity.stackit.gg
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: redis-svc
            port:
              number: 80
  - host: rubinity.stackit.gg
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: api-svc
            port:
              number: 80
